[package]
name = "connectivity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
futures = "0.3.24"
log = "0.4.17"
rtnetlink = "0.11.0"
thiserror = "1.0.36"
tokio = { version = "1.21.1", features = ["full"] }

[dev-dependencies]
env_logger = "0.9.1"
