[package]
name = "network_connectivity"
version = "1.0.0"
authors = ["Jimmy van Hest <jimmyvanhest@gmail.com>"]
edition = "2021"
rust-version = "1.63.0"
description = "A network connectivity notification module."
readme = "README.md"
repository = "https://github.com/jimmyvanhest/rust-network-connectivity"
license = "MIT"
keywords = ["network", "connectivity"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
futures = "0.3.24"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["macros", "sync"] }

[dev-dependencies]
env_logger = "0.10.0"
tokio = { version = "1.21.2", features = ["time"] }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.11.0"
