[package]
name = "network_connectivity"
version = "1.0.0"
authors = ["Jimmy van Hest <jimmyvanhest@gmail.com>"]
edition = "2021"
rust-version = "1.63.0"
categories = ["network-programming"]
description = "A network connectivity notification module."
readme = "README.md"
repository = "https://github.com/jimmyvanhest/rust-network-connectivity"
license = "MIT"
keywords = ["network", "connectivity"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
futures = "0.3.24"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["macros", "sync"] }

[dev-dependencies]
env_logger = "0.10.0"
tokio = { version = "1.21.2", features = ["time", "tokio-macros", "rt"] }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.11.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.43.0", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }
